cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_4.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ecb3_enc.c:22: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/ecb3_enc.c:22:5: Write of unused value
20.   
21.       c2l(in, l0);
22.       c2l(in, l1);
          ^
23.       ll[0] = l0;
24.       ll[1] = l1;
